infra/manifests/mqttui/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: iot-tools
  labels:
    istio.io/dataplane-mode: ambient
