infra/manifests/mqttui/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mqttui
  namespace: iot-tools
  labels:
    app.kubernetes.io/name: mqttui
    app.kubernetes.io/instance: mqttui
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: mqttui
      app.kubernetes.io/instance: mqttui
  template:
    metadata:
      labels:
        app.kubernetes.io/name: mqttui
        app.kubernetes.io/instance: mqttui
    spec:
      nodeSelector:
        kubernetes.io/hostname: master
      containers:
        - name: mqttui
          image: terdia07/mqttui:v2.0.2
          ports:
            - name: http
              containerPort: 5000
              protocol: TCP
          resources:
            requests:
              cpu: 25m
              memory: 64Mi
            limits:
              cpu: 250m
              memory: 256Mi
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 30
            periodSeconds: 30
