infra/manifests/mqttui/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mqttui
  namespace: iot-tools
  labels:
    app.kubernetes.io/name: mqttui
    app.kubernetes.io/instance: mqttui
spec:
  type: ClusterIP
  ports:
    - port: 5000
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: mqttui
    app.kubernetes.io/instance: mqttui
